@@ -1,3 +1,7 @@
+2011-08-24  User  <user@ubuntu>
+
+	* configure.ac: AM_CONFIG_HEADER changes to AC_CONFIG_HEADERS
+
 2011-08-22 Jesse Kornblum
 
 	* bootstrap-mingw.sh: Added support for mingw on Ubuntu
